# surveyequivalence

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  SimpleRunningExample.ipynb  dummy_data.py  experiments.py  main.py  make_power_curve_graph.py  requirements.txt  setup.cfg  setup.py  test.py
data/: wiki_attack_labels_and_predictor.csv
docs/: api.rst  conf.py  getting_started.rst  index.rst  tutorials.rst
docs/_build/doctrees/: api.doctree  environment.pickle  getting_started.doctree  index.doctree  tutorials.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html
saved_analyses/11-May-2021_04-16-31_PM/running_example/abc_plus_cross_entropy/: README  classifier_scores.csv  expert_power_curve.csv  params.pickle  (+5 more)
simulations/: experiment_notebook.ipynb  figures_notebook.ipynb  simulations_notebook.ipynb
surveyequivalence/: __init__.py  combiners.py  data_noise_generator.py  equivalence.py  generate_labels.py  predictors.py  scoring_functions.py  synthetic_datasets.py
surveyequivalence/examples/: __init__.py  credbank.py  guessthekarma.py  paper_running_example.py  personal_attacks.py  synthetic_running_example.py  toxicity.py
surveyequivalence/templates/: classifier_template.txt  performance_ratio_template.txt  pgf_template.txt  plot_template.txt  surveyequiv_template.txt
test/: __init__.py  continuous_prediction_tests.py  discrete_distribution_tests.py
tests/: discrete_distribution_tests.py  scoring_function_tests.py
(+123 files in other folders)
