[metadata]
name = survey-equivalence-presnick
version = 0.0.1
author = Paul Resnick, Tim Weninger, Yuqing Kong, and Grant Schoenebeck
author_email = presnick@umich.edu
description = Code for calculating survey equivalence
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/umsi/surveyequivalence
project_urls =
    Bug Tracker = https://github.com/umsi/surveyequivalence/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = surveyequivalence
packages = find:
python_requires = >=3.6
include_package_data = True

[options.packages.find]
where = surveyequivalence